# forge.chan.run

./: .gitignore  README.md  issues.md  mise.toml  pitchfork.toml
.config/: docker-compose.yml  init-airflow-db.sh  localias.yaml
.config/mise/tasks/utils/: check-localias-capability.sh  header.sh  health-check.sh  task-generator.sh
.config/mise/tasks/utils/lib/: README.md  gum-helpers.sh
services/backend/: .eslintrc.json  mise.toml  package.json  pnpm-lock.yaml  tsconfig.json
services/backend/src/: app.ts  index.ts
services/backend/tests/: app.test.ts
services/docker/: mise.toml
services/frontend/: .eslintrc.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
services/frontend/src/: App.test.tsx  App.tsx
services/workflow/: .gitignore  README.md  main.py  mise.toml  pyproject.toml
services/workflow/config/: airflow.cfg
services/workflow/dags/: README.md  __init__.py  example_hello_world.py  local_hello_world.py
services/workflow/tests/: test_hello_world_dag.py
